Re-enable java 16
By setting some opens and exports in the tests we can re-enable java
16.